# PasswordProject

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  clean_data.py  fix_charset.py  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.py  start.sh  start_gui.sh
.github/workflows/: ci.yml  release.yml
docs/: deploy_guide.md
docs/superpowers/plans/: 2026-04-13-fix-all-issues.md  2026-04-14-fastapi-backend.md
docs/superpowers/specs/: 2026-04-14-ios-app-design.md
scripts/: build_mac_app.sh  check.sh  release.py  setup.sh
src/password_manager/: __init__.py
src/password_manager/cli/: __init__.py  main.py
src/password_manager/config/: __init__.py  settings.py
src/password_manager/core/: __init__.py  ai_password_gen.py  crypto.py  llm_client.py  multimodal_extractor.py  password_gen.py  user_manager.py  vault.py
src/password_manager/gui/: __init__.py  app_icon.icns  main_window.py
src/password_manager/storage/: __init__.py  database.py  models.py
src/password_manager/utils/: __init__.py  helpers.py  logging_config.py  validators.py
tests/: conftest.py
tests/integration/: test_vault.py
tests/unit/: test_ai_import.py  test_crypto.py  test_helpers.py  test_init.py  test_models.py  test_password_gen.py  test_settings.py  test_validators.py
